build/default/demoapp-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: demoapp
  labels:
    app: demoapp
  annotations: {}
spec:
  selector:
    matchLabels:
      app: demoapp
  template:
    metadata:
      labels:
        app: demoapp
      annotations: {}
    spec:
      containers:
        - name: default
          image: hashicorp/demo-webapp:v3
          command: []
          args: []
          env: []
          resources:
            requests:
              cpu: 256m
              memory: 512M
      restartPolicy: Always
      serviceAccountName: demoapp
      securityContext:
        runAsUser: 10000
        runAsGroup: 10000
        fsGroup: 10000
      tolerations: []
