build/default/demoapproute-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: demoapproute
  labels: {}
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - demo.guku.io
      secretName: demoapproute-tls-secret
  rules:
    - host: demo.guku.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demoapp
                port:
                  number: 80
